--- a/MVVM_IMPLENTACION_HACB/MVVM_IMPLENTACION_HACB.csproj
+++ b/MVVM_IMPLENTACION_HACB/MVVM_IMPLENTACION_HACB.csproj
@@ -17,6 +17,11 @@
 
   <ItemGroup>
     <Folder Include="Modelo\" />
-    <Folder Include="Vista\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Vista\Pagina1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
