Boton de volver

--- a/MVVM_IMPLENTACION_HACB/MVVM_IMPLENTACION_HACB.csproj
+++ b/MVVM_IMPLENTACION_HACB/MVVM_IMPLENTACION_HACB.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Vista\Page2.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Vista\Pagina1.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
