--- a/MVVM_IMPLENTACION_HACB/MVVM_IMPLENTACION_HACB.csproj
+++ b/MVVM_IMPLENTACION_HACB/MVVM_IMPLENTACION_HACB.csproj
@@ -16,10 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Modelo\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <EmbeddedResource Update="Vista\Crudpokemon.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Vista\Page1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Vista\Page2.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
